@@ -18,6 +18,7 @@ mlUnit development snapshot
     first line lead to an unintelligible error.
   - Fix: some numeric arrays deemed equal, even if of different size
   - Fix: printable returns logical for 1x0 char strings
+  - Fix: empty 1x0 and 0x0 char strings deemed different
 
 
 mlUnit 1.6.6 (2013-12-13)
